...
                android:singleLine="false"
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:text="@string/label_dialog_network_task_edit_accesstype" />

            <RadioGroup
                android:id="@+id/radiogroup_dialog_network_task_edit_accesstype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
...
                android:layout_row="1"
                android:layout_column="0"
                android:ellipsize="none"
                android:singleLine="false"
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_address"
                android:text=""
                tools:ignore="LabelFor" />

            <LinearLayout
                android:id="@+id/linearlayout_dialog_network_task_edit_address"
                android:layout_width="match_parent"
...

                <EditText
                    android:id="@+id/edittext_dialog_network_task_edit_address"
                    style="@style/EditTextTheme"
                    android:layout_width="@dimen/edittext_dialog_network_task_edit_address_width"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:scrollHorizontally="false"
                    android:maxLines="@integer/edittext_dialog_network_task_edit_address_max_lines"
                    android:text="" />

            </LinearLayout>
...
                android:layout_row="2"
                android:layout_column="0"
                android:ellipsize="none"
                android:singleLine="false"
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_port"
                android:text=""
                tools:ignore="LabelFor" />

            <LinearLayout
                android:id="@+id/linearlayout_dialog_network_task_edit_port"
                android:layout_width="match_parent"
...
                android:layout_row="3"
                android:layout_column="0"
                android:ellipsize="none"
                android:singleLine="false"
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_interval"
                android:text="@string/label_dialog_network_task_edit_interval" />

            <LinearLayout
                android:id="@+id/linearlayout_dialog_network_task_edit_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            <TextView
                android:id="@+id/textview_dialog_network_task_edit_stop_on_success_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_network_task_edit_stop_on_success_label_margin_top"
                android:textStyle="bold"
                android:layout_row="15"
                android:layout_column="0"
                android:ellipsize="none"
                android:singleLine="false"
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:text="@string/label_dialog_network_task_edit_stop_on_success" />
...
                android:layout_marginStart="@dimen/linearlayout_dialog_network_task_edit_notification_margin_left"
                android:layout_marginTop="@dimen/linearlayout_dialog_network_task_edit_notification_margin_top"
                android:layout_row="17"
                android:layout_column="1">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_network_task_edit_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/switch_dialog_network_task_edit_notification_padding_top"
                    android:paddingBottom="@dimen/switch_dialog_network_task_edit_notification_padding_bottom"
                    android:minHeight="@dimen/switch_dialog_network_task_edit_notification_min_height"
                    app:trackTint="@drawable/switchtrack_selector"
                    app:thumbTint="@drawable/switchthumb_selector"
                    android:showText="false" />

                <TextView
                    android:id="@+id/textview_dialog_network_task_edit_notification_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="" />

            </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_network_task_edit_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_network_task_edit_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_network_task_edit_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_network_task_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_network_task_edit_cancel"
...
