...
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="AccessType_NULL" tools:ignore="ExtraTranslation">No type</string>
    <string name="AccessType_NULL_address" tools:ignore="ExtraTranslation">Host: not applicable</string>
    <string name="AccessType_PING" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING">Ping</string>
    <string name="AccessType_PING_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING_address">Host:</string>
    <string name="AccessType_PING_port" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING_port">Port:</string>
    <string name="AccessType_PING_task_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING_task_validator">net.ibbaa.keepitup.ui.validation.StandardHostPortValidator</string>
    <string name="AccessType_PING_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="AccessType_CONNECT" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT">Connect</string>
    <string name="AccessType_CONNECT_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT_address">Host:</string>
    <string name="AccessType_CONNECT_port" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT_port">Port:</string>
    <string name="AccessType_CONNECT_task_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT_task_validator">net.ibbaa.keepitup.ui.validation.StandardHostPortValidator</string>
    <string name="AccessType_CONNECT_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="AccessType_DOWNLOAD" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD">Download</string>
    <string name="AccessType_DOWNLOAD_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_address">URL:</string>
    <string name="AccessType_DOWNLOAD_port" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_port">Port:</string>
    <string name="AccessType_DOWNLOAD_task_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_task_validator">net.ibbaa.keepitup.ui.validation.URLValidator</string>
    <string name="AccessType_DOWNLOAD_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="AccessType_SNMP" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP">SNMP</string>
    <string name="AccessType_SNMP_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_address">Host:</string>
...
