...
  -->

<resources>
    <integer name="task_name_max_length">100</integer>
    <integer name="task_accesstype_default">1</integer>
    <string name="task_accesstype_key">task_accesstype_key</string>
    <string name="task_address_default">192.168.178.1</string>
    <string name="task_address_key">task_address_key</string>
    <integer name="task_port_default">22</integer>
    <string name="task_port_key">task_port_key</string>
    <integer name="task_snmp_port_default">161</integer>
    <string name="task_snmp_port_key">task_snmp_port_key</string>
    <integer name="task_interval_default">15</integer>
...
    <integer name="task_port_maximum">65535</integer>
    <integer name="task_snmp_port_minimum">0</integer>
    <integer name="task_snmp_port_maximum">65535</integer>
    <integer name="task_interval_minimum">1</integer>
    <integer name="task_interval_maximum">2147483647</integer>
    <string name="task_alarm_duration_key">task_alarm_duration_key</string>
    <integer name="task_alarm_duration">60</integer>
</resources>
